--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     background-color: darkslategray;
     color:antiquewhite;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .program-button {
+    font-family: 'Courier New', Courier, monospace;
     color:antiquewhite;
     background-color: dimgrey;
     border-style: none;
